--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1270,6 +1270,7 @@ label.pagato_con_quietanza=Pagato con quietanza
 label.quotaAnnuale= Quota annuale
 label.quotaAnnuale_list= Lista di quote annuale non pagate e scadute
 label.id_quotaAnnuale= Id
+label.seleziona.tutti=Seleziona tutti
 label.denominazioneLegale= Denominazione Legale
 label.dataScadenzaPagamento = Data Scadenza Pagamento
 label.importo = Importo
