--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -295,6 +295,7 @@ error.csv_to_xml_report_error=Errore durante la produzione del file XML da CSV
 error.data_fine_non_valida=La data di fine non può essere antecedente alla data di inizio
 error.data_fine_res_non_valida=La data di fine dell'Evento deve essere compresa nello stesso anno solare della data di inizio
 error.data_fine_riedizione_non_valida=La riedizione si deve svolgere nell'anno solare di riferimento dell'Evento rieditato
+error.data_invalid=formato data non corretto
 error.data_inizio_antecedente_al_padre=La data di inizio di una riedizione non può essere antecedente a quella dell'evento rieditato
 error.data_inizio_non_valida=Non è possibile inserire un Evento entro 15 giorni (Provider A) / 30 giorni (Provider B) dalla data del suo inizio.
 error.data_inizio_riedizione_non_valida=Non è possibile inserire una riedizione di un Evento entro 10 giorni dalla data del suo inizio, che deve inoltre ricadere nello stesso anno solare della data di fine dell'Evento che viene rieditato.
@@ -910,9 +911,6 @@ label.inserimento_relazione_annuale=Inserimento Relazione Annuale {0}
 label.inserimento_rendicontazione=Inserimento Rendicontazione
 label.inserimento_sede=Inserimento Sede
 label.inserimento_seduta=Inserimento nuova Seduta
-label.sposta_data_scadenza_pagamento=Sposta
-label.sposta_conferma=Conferma
-label.sposta= Sposta data scadenza pagamento
 label.inserimento_sottoscrivente_verbale=Inserimento del Sottoscrivente del Verbale della Valutazione sul Campo
 label.inserimento_valutazione=Inserimento della Valutazione della Domanda
 label.inserimento_valutazione_commissione_in_ODG=Inserisci una Domanda di Accreditamento da valutare nell'Ordine del Giorno
@@ -1269,8 +1267,7 @@ label.quietanzaPagamento=Quietanza di Pagamento
 label.pagato_con_quietanza=Pagato con quietanza
 label.quotaAnnuale= Quota annuale
 label.quotaAnnuale_list= Lista di quote annuale non pagate e scadute
-label.id_quotaAnnuale= Id
-label.seleziona.tutti=Seleziona tutti
+label.id_quotaAnnuale_provider=Provider Id
 label.denominazioneLegale= Denominazione Legale
 label.dataScadenzaPagamento = Data Scadenza Pagamento
 label.importo = Importo
@@ -1445,6 +1442,8 @@ label.sponsorFile=Contratto Sponsor
 label.sponsorizzato=Sponsorizzato
 label.sponsors=Sponsors
 label.sposta=Sposta data scadenza pagamento
+label.sposta_data_scadenza_pagamento=Sposta
+label.sposta_conferma=Conferma
 label.sposta_orario_selezionati=Sposta orario selezionati
 label.stato=Stato
 label.stato_account=Stato Account
@@ -1625,11 +1624,13 @@ message.evento_validato_e_salvato_success=L'Evento è stato validato e salvato c
 message.gruppoCrecm_riassegnato=Domanda riassegnata ai Referee con successo!
 message.impossibile_creare_pdf_decreto_decadenza=Impossibile creare il pdf Decreto di Decadenza.
 message.impossibile_creare_pdf_verbale=Impossibile creare il pdf del Verbale.
+message.impossibile_inserire_data_scadenza_pagamento_nel_passato=Impossibile inserire una Data Scadenza Pagamento in una data precedente a quella di oggi.
 message.impossibile_inserire_seduta_nel_passato=Impossibile inserire una Seduta in una data precedente a quella di oggi.
 message.impostazioni_provider_aggiornate=Le impostazioni del Provider sono state aggiornate con successo.
 message.info_login=Le credenziali di accesso sono utili per accedere al sistema e procedere all’invio della domanda di accreditamento provvisorio come Provider regionale ECM.\nPer la registrazione sarà necessario compilare tutti i campi ricordando che quelli contrassegnati da un asterisco sono obbligatori.\nSi ricorda che all’indirizzo email inserito, sarà inviata la password per il primo accesso e ogni comunicazione successiva relativa all’accesso e all’utenza del provider in generale.
 message.inserire_almeno_sede_legale=\u00C8 necessario inserire almeno una Sede Legale
 message.inserire_campi_required=Si prega di ricontrollare i campi obbligatori segnati in rosso.
+message.inserire_campi_required_data=Si prega di ricontrollare il campo Data.
 message.inserire_il_rendiconto=Inserire il file da elaborare!
 message.inserito=Il {0} è stato salvato con successo.
 message.invio_cogeaps_ok=Il report è stato inviato con successo
