Fixed the errors in the view, fixed the way to get the id's and tested various scenarios.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1660,6 +1660,7 @@ message.sede_eliminata=Sede eliminata.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
 message.seduta_eliminata=Seduta eliminata.
 message.seduta_salvata=La Seduta è stata salvata con successo.
+message.quotaAnnuale_salvata=La Data Scadenza Pagamento e stata aggiornata con successo.
 message.seduta_valutata=Seduta conclusa correttamente con la valutazione di tutte le Domande inserite nell'Ordine del Giorno.
 message.sono_evidenziati_gli_elementi_aggiunti_dal_ultimo_accreditamento=Sono evidenziati in verde gli elementi aggiunti o completamente sostituiti rispetto l'ultima domanda di accreditamento
 message.sono_evidenziati_gli_elementi_aggiunti_e_rimossi_in_attesa_di_approvazione=Sono evidenziati gli elementi aggiunti e rimossi che saranno effettivi solo dopo approvazione da parte della Segreteria ECM.
