Flag alimenti prima infanzia #12422

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -379,6 +379,7 @@ error.troppi_partecipanti25=Il numero massimo di partecipanti per questa tipolog
 error.troppi_partecipanti_per_tutor=Il numero dei Partecipanti supera il rapporto 5 Partecipanti per Tutor
 error.troppi_responsabili3=I responsabili scientifici devono essere al massimo 3
 error.url=URL errato
+error.evento_deve_essere_sponsorizzato=L'evento deve essere sponsorizzato
 error.username.duplicated=username già registrato nel sistema
 error.vincolo_partecipanti_tutorATTIVITA_DI_RICERCA=\u00C8 obbligatorio inserire nel programma almeno un ruolo Partecipante
 error.vincolo_partecipanti_tutorAUDIT_CLINICO_ASSISTENZIALE=\u00C8 obbligatorio inserire nel programma almeno un ruolo Partecipante
@@ -757,6 +758,7 @@ label.effettuate_sul_campo=effettuate sul Campo
 label.elabora=Elabora
 label.elimina=Elimina
 label.elimina_tutti_eventi_da_pfa=Elimina tutti gli eventi dal Piano Formativo
+label.elimina_tutti_eventi_da_pfa_from_csv=Elimina tutti gli eventi dal Piano Formativo (importati da csv)
 label.email=E-mail
 label.enabled=Abilitato
 label.ending_verbale=Di quanto sopra attestato, è stato redatto il presente verbale composto da n°      pagine, comprensive degli allegati, e copia del quale viene rilasciata al Legale Rappresentante. \nLetto, confermato e sottoscritto alle ore      \nData     \n
