First Commit (Inserimento nuovo stato tra valutazione della segreteria e valutazione sul campo)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -420,6 +420,7 @@ label.accreditamento_titolo={0} della Domanda di Accreditamento {1} ({2})
 label.accreditamento_validazione=Data validazione
 label.accreditamento_valutazione_segreteria=Data valutazione segreteria
 label.accreditato=Accreditato
+label.account=Account attualmente presente
 label.aggiorna=Aggiorna
 label.aggiorna_account=Aggiorna Account
 label.aggiungi=Aggiungi
@@ -878,8 +879,10 @@ label.indicatore_efficacia=Indicatori per misurare l’efficacia formativa del p
 label.indietro=Indietro
 label.indirizzo=Indirizzo
 label.indirizzo_sede={0} ({1})
+label.inFirma=Riassegna Valutazione (Richiesta integrazione in attesa di firma del documento)
 label.info_accesso_piattaforma=Accesso piattaforma FAD
 label.info_account=Accedi all'area riservata
+label.infoAccreditamento=Informazione dell'accreditamento 
 label.info_accreditamento=Info Accreditamento
 label.info_applicazione_integrazione=Le modifiche saranno applicate solo dopo approvazione da parte della Segreteria ECM
 label.info_blocco_legali=Accedendo alla sezione Dati dei Responsabili, i dati del Legale Rappresentante e del Delegato del Legale Rappresentante non saranno più modificabili in quanto utilizzati per il controllo della firma digitale apposta sui file allegati. Qualora il Provider abbia previsto la figura del Delegato del Legale Rappresentante il controllo sulla firma digitale dei file sarà effettuato sui dati del Delegato del Legale Rappresentante
@@ -896,6 +899,7 @@ label.info_richiesta_accreditamento=Info Richiesta Accreditamento
 label.info_sede_programmaRES=Il campo relativo alla sede di svolgimento dell’evento deve essere modificato solo nel caso in cui la sede sia diversa da quanto indicato nella sezione 1
 label.info_sponsor_evento=Il Provider dichiara che i contratti sono disponibili presso la propria sede e si impegna ad allegarli entro 90 giorni dalla data di fine dell’evento al fine di procedere alla rendicontazione
 label.info_tooltip_numero_partecipanti_fsc=Vincolo di 1 tutor per massimo 5 partecpanti. \n (1 tutor, massimo 5 partecipanti) \n (2 tutor, massimo 10 partecipanti)
+label.info_valutazione=Informazione della valutazione non storicizzata 
 label.info_tooltip_obiettivo_nazionale=OBIETTIVI FORMATIVI TECNICO-PROFESSIONALI: finalizzati allo sviluppo delle competenze e delle conoscenze tecnico professionali individuati nel settore specifico di attività, acquisendo crediti formativi inerenti eventi specificatamente rivolti alla professione o alla disciplina di appartenenza. \n \n OBIETTIVI FORMATIVI DI PROCESSO: finalizzati allo sviluppo delle competenze e delle conoscenze nelle attività e nelle procedure idonee a promuovere il miglioramento della qualità efficienza, efficacia, appropriatezza e sicurezza degli specifici processi di produzione delle attività sanitarie. Questi obiettivi si rivolgono dunque ad operatori ed équipe che intervengono in un determinato segmento di produzione. \n \n OBIETTIVI FORMATIVI DI SISTEMA: finalizzati allo sviluppo delle conoscenze e competenze nelle attività e nelle procedure idonee a promuovere il miglioramento della qualità, efficienza, efficacia, appropriatezza e sicurezza dei sistemi sanitari. Questi obiettivi si rivolgono, di norma, a tutti gli operatori avendo quindi caratteristiche interprofessionali.
 label.informazioni_sede=Informazioni relative alla Sede dell'Evento
 label.inserimento_contratto_sponsor=Inserimento dell'allegato Contratto per lo Sponsor:\u0020
@@ -986,7 +990,7 @@ label.listaDomandePreavvisoRigettoStandard=Lista delle Domande di Accreditamento
 label.listaDomandeRichiestaIntegrazione=Lista delle Domande di Accreditamento di cui richiedere l'integrazione
 label.listaDomandeRichiestaIntegrazioneProvvisorio=Lista delle Domande di Accreditamento Provvisorie in richiesta di integrazione
 label.listaDomandeRichiestaIntegrazioneStandard=Lista delle Domande di Accreditamento Standard in richiesta di integrazione
-label.lista_allegati=Lista degli allegati del provider {0}
+label.lista_allegati=Lista degli allegati {0}
 label.lista_anni_selezionabili=Lista degli anni selezionabili
 label.lista_comunicazioni_tipo=Lista delle Comunicazioni {0}
 label.lista_domande_da_valutare=Domande da valutare
@@ -1189,7 +1193,7 @@ label.paga=Paga
 label.pagamenti_annuali=Pagamenti Annuali
 label.pagamento_con_myPay_settings=Modalità di pagamento con myPay \n(default dipende dal gruppo del Provider)
 label.pagato=Pagato
-label.pagato_stato=Stato pagamento
+label.pagato_stato=pagamento
 label.partecipanti_evento_codEvento=Partecipanti dell''Evento {0}
 label.partita_iva=Partita IVA
 label.partners=Partners
@@ -1319,7 +1323,9 @@ label.responsabile_segreteria_organizzativa=Responsabile segreteria organizzativ
 label.responsabile_sistema_informatico=Responsabile Sistema Informatico
 label.responsabili=Responsabili
 label.responsabili_scientifici=Responsabili scientifici
+label.riassegna=Riassegna
 label.riassegna_domanda_accreditamento=Riassegna la domanda di accreditamento
+label.riassegnaAccountValutazione=Riassegna Valutazione
 label.ricavi_altre_forme_finanziamento=Ricavi da altre forme di finanziamento
 label.ricavi_da_sponsor=Ricavi da sponsorizzazioni
 label.ricerca_docenti_and=Ricerca gli eventi che contengono tutti i docenti selezionati
@@ -1469,6 +1475,7 @@ label.tempo_dedicato=Tempo Dedicato
 label.tempo_dedicato=Tempo Dedicato
 label.tempo_indeterminato=Tempo indeterminato
 label.tipo=Tipo
+label.tipo_Wf=Tipo di workflow attivo
 label.tipoOrganizzatore_nome=Tipologia
 label.tipo_accreditamento=Tipo Accreditamento
 label.tipo_domanda=Tipologia domanda
