Inserimento nuovo stato tra Valutazione della Segreteria e Valutazione sul campo

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1105,7 +1105,7 @@ label.non_ha_completato_domanda_accreditamento_in_tempo=Non ha completato la dom
 label.non_ha_inserito_piano_formativo=Non ha inserito il piano formativo
 label.non_ha_inserito_relazione_annuale=Non ha inserito la relazione annuale alla scadenza
 label.non_ha_pagato_quota_annuale=Non ha pagato la quota annuale
-label.non_ha_valutato=Non ha valutato le domande di accreditamento assegnategli
+label.non_ha_valutato=Non ha valutato le domande di  assegnategli
 label.non_hanno_completato_domanda_accreditamento_in_tempo=Non hanno completato la domanda di accreditamento in tempo
 label.non_hanno_inserito_piano_formativo=Non hanno inserito il piano formativo
 label.non_hanno_inserito_relazione_annuale=Non hanno inserito la relazione annuale alla scadenza
@@ -1666,6 +1666,7 @@ message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
 message.seduta_eliminata=Seduta eliminata.
 message.seduta_salvata=La Seduta è stata salvata con successo.
 message.quotaAnnuale_salvata=La Data Scadenza Pagamento è stata aggiornata con successo.
+message.riassegna=Il riassegnamento è stato fatto con successo.
 message.seduta_valutata=Seduta conclusa correttamente con la valutazione di tutte le Domande inserite nell'Ordine del Giorno.
 message.sono_evidenziati_gli_elementi_aggiunti_dal_ultimo_accreditamento=Sono evidenziati in verde gli elementi aggiunti o completamente sostituiti rispetto l'ultima domanda di accreditamento
 message.sono_evidenziati_gli_elementi_aggiunti_e_rimossi_in_attesa_di_approvazione=Sono evidenziati gli elementi aggiunti e rimossi che saranno effettivi solo dopo approvazione da parte della Segreteria ECM.
