Inserimento nuovo stato tra Valutazione della Segreteria e Valutazione sul campo--last commit

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1324,6 +1324,8 @@ label.responsabile_sistema_informatico=Responsabile Sistema Informatico
 label.responsabili=Responsabili
 label.responsabili_scientifici=Responsabili scientifici
 label.riassegna=Riassegna
+label.riassegna_account=Riassegna account
+label.conferma_riassegna=Volete confermare le modifiche?
 label.riassegna_domanda_accreditamento=Riassegna la domanda di accreditamento
 label.riassegnaAccountValutazione=Riassegna Valutazione
 label.ricavi_altre_forme_finanziamento=Ricavi da altre forme di finanziamento
