12869 - Modifiche eventi FSC Modificate entities per gestire i nuovi campi, modificati template di inserimento e aggiornata la validazione del evento FSC.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -316,6 +316,11 @@ error.email_repeat=l'email deve coincidere
 error.empty=campo obbligatorio
 error.empty_crediti=\u00C8 obbligatorio compilare o il Campo Crediti ECM proposti dal Sistema o il Campo Crediti ECM attribuiti dal Provider
 error.entrambi_valori_per_delibera=Per salvare la delibera sono necessari entrambi i dati.
+error.errore_tabella_fsc_versione2_ATTIVITA_DI_RICERCA=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - massimo un partecipante per il ruolo Coordinatore di gruppi \n - massimo un partecipante per i ruolo di Responsabile scientifico A, B, C \n - massimo un partecipante per i ruolo di Esperto A, B, C \n - massimo un partecipante per i ruolo di Coordinatore A, B, C
+error.errore_tabella_fsc_versione2_AUDIT_CLINICO_ASSISTENZIALE=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - la sommatoria di tutti i partecipanti con ruolo Partecipante A, B, C non superi 25 \n - l'impegno complessivo per il ruolo Partecipante A, B, C sia almeno di 10 ore \n - massimo un partecipante per il ruolo Coordinatore di gruppi \n - massimo un partecipante per i ruolo di Responsabile scientifico A, B, C \n - massimo un partecipante per i ruolo di Esperto A, B, C \n - massimo un partecipante per i ruolo di Coordinatore A, B, C
+error.errore_tabella_fsc_versione2_GRUPPI_DI_MIGLIORAMENTO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero massimo dei partecipanti sia 25 \n - l'impegno complessivo per il partecipante sia almeno di 8 ore \n - massimo un partecipante per il ruolo Coordinatore di gruppi \n - massimo un partecipante per i ruolo di Responsabile scientifico A, B, C \n - massimo un partecipante per i ruolo di Esperto A, B, C \n - massimo un partecipante per i ruolo di Coordinatore A, B, C
+error.errore_tabella_fsc_versione2_PROGETTI_DI_MIGLIORAMENTO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - l'impegno complessivo per il ruolo Partecipante A, B, C sia almeno di 8 ore \n - massimo un partecipante per il ruolo Responsabile del progetto \n - massimo un partecipante per i ruolo di Responsabile scientifico A, B, C \n - massimo un partecipante per i ruolo di Esperto A, B, C \n - massimo un partecipante per i ruolo di Coordinatore A, B, C
+error.errore_tabella_fsc_versione2_TRAINING_INDIVIDUALIZZATO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - la sommatoria di tutti i partecipanti con ruolo Partecipante A, B, C non violi il vincolo: massimo 5 Partecipanti per Tutor \n - massimo un partecipante per il ruolo Coordinatore di gruppi \n - massimo un partecipante per i ruolo di Responsabile scientifico A, B, C \n - massimo un partecipante per i ruolo di Esperto A, B, C \n - massimo un partecipante per i ruolo di Coordinatore A, B, C
 error.errore_tabella_fscATTIVITA_DI_RICERCA=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - massimo un partecipante per il ruolo Coordinatore
 error.errore_tabella_fscAUDIT_CLINICO_ASSISTENZIALE=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - la sommatoria di tutti i partecipanti con ruolo Partecipante A, B, C non superi 25 \n - l'impegno complessivo per il ruolo Partecipante A, B, C sia almeno di 10 ore \n - massimo un partecipante per il ruolo Coordinatore
 error.errore_tabella_fscGRUPPI_DI_MIGLIORAMENTO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero massimo dei partecipanti sia 25 \n - l'impegno complessivo per il partecipante sia almeno di 8 ore \n - massimo un partecipante per il ruolo Coordinatore
@@ -323,11 +328,13 @@ error.errore_tabella_fscPROGETTI_DI_MIGLIORAMENTO=Controllare nel riepilogo dei 
 error.errore_tabella_fscTRAINING_INDIVIDUALIZZATO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - la sommatoria di tutti i partecipanti con ruolo Partecipante A, B, C non violi il vincolo: massimo 5 Partecipanti per Tutor \n - massimo un partecipante per il ruolo Coordinatore
 error.errori_calcolo_tabella_riepilogo=Si è verificato un errore nel calcolo della tabella di riepilogo dei ruoli
 error.evento_non_trovato=Non è stato trovato alcun evento corrispondente all'Id inserito.
+error.fad_data_fine_non_appartenente_triennio_attuale=La data di fine non appartiene al triennio attuale 2017 - 2019
 error.file_non_firmato=Il file deve essere firmato digitalmente
 error.file_vuoto=Il file inserito è vuoto.
 error.formatNonAccepted=Errore nel formato del file. \u00C8 consentito inviare solo file PDF e P7M
 error.formatNonAcceptedCSV=Errore nel formato del file. \u00C8 consentito inviare solo file CSV
 error.formatNonAcceptedXML=Errore nel formato del file. \u00C8 consentito inviare solo file XML, P7M e CSV
+error.fsc_data_fine_non_appartenente_triennio_attuale=La data di fine non appartiene al triennio attuale 2017 - 2019
 error.invalid=formato non corretto
 error.invio_report_cogeaps=Errore durante l'invio del report al Co.Ge.A.P.S.
 error.mancano_spunte_radio_verifica_apprendimento_fad=Controllare di aver spuntato correttamente le modalita di verifica dell'apprendimento
@@ -343,6 +350,8 @@ error.number_min=valore inferiore al valore minimo consentito
 error.numero_coordinatore_integrazione=Il risultato della valutazione dell'integrazione viola il vincolo di avere un e un solo coordinatore del comitato scientifico. Si prega di ricontrollare la valutazione.
 error.numero_massimo_giorni_evento_fad365=L'evento non può avere una durata superiore ai 365 giorni
 error.numero_massimo_giorni_evento_fsc730=L'evento non può avere una durata superiore ai 730 giorni
+error.numero_massimo_giorni_evento_fsc_attivita_di_ricerca=L'evento con tipologia Attività di ricerca non può avere una durata superiore ai 730 giorni
+error.numero_massimo_giorni_evento_fsc_non_attivita_di_ricerca=L'evento non può avere una durata superiore ai 365 giorni
 error.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da un Coordinatore e almeno 4 Componenti
 error.numero_minimo_comitato_integrazione=Il risultato della valutazione dell'integrazione viola il vincolo del numero minimo dei componenti del comitato scientifico. Si prega di ricontrollare la valutazione.
 error.numero_minimo_professioni=Nei componenti del Comitato Scientifico vi devono essere almeno 2 professioni diverse
@@ -374,6 +383,8 @@ error.solo_autocertificazione_selezionabile=\u00C8 possibile selezionare solo la
 error.solo_pause_programma_res=Il programma non può essere composto di sole pause, verifiche di apprendimento e registrazione partecipanti, inserire almeno un'attività
 error.stato_elaborazione_cogeaps=Errore imprevisto durante la richiesta di stato elaborazione al Co.Ge.A.P.S.
 error.stessoCf=il delegato del legale rappresentante non può avere lo stesso codice fiscale del legale rappresentante
+error.troppi_coordinatori3=I coordinatori devono essere al massimo 3
+error.troppi_esperti3=Gli esperti devono essere al massimo 3
 error.troppi_partecipanti100=Il numero massimo di partecipanti per questa tipologia di evento è di 100 partecipanti
 error.troppi_partecipanti200=Il numero massimo di partecipanti per questa tipologia di evento è di 200 partecipanti
 error.troppi_partecipanti25=Il numero massimo di partecipanti per questa tipologia di evento è di 25 partecipanti
@@ -607,6 +618,7 @@ label.coordinatore=Coordinatore
 label.coordinatore_comitato=Coordinatore
 label.coordinatore_comitato_scientifico=Coordinatore Comitato Scientifico
 label.coordinatore_withName=Coordinatore: {0}
+label.coordinatori=Coordinatori
 label.costo_totale_eventi=Costo totale eventi
 label.crea_account=Crea Account
 label.crea_anagrafica=Crea Anagrafica
@@ -774,6 +786,7 @@ label.esito_ricerca=(Esito Ricerca)
 label.esito_valutazione=Esito Valutazione
 label.esito_valutazioni=Esito della valutazione
 label.esperienzaFormazione=Esperienza formazione in ambito sanitario
+label.esperti=Esperti
 label.esporta_pdf=Esporta in pdf
 label.estrattoBilancioComplessivo=Estratto del bilancio complessivo degli ultimi 3 anni
 label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni e budget previsionale
@@ -805,6 +818,7 @@ label.evento_to_cogeaps_title=Trasmissione XML partecipanti alla Regione Veneto 
 label.eventofsc_ottenutoComitatoEtico=Ottenuto il parere del comitato etico?
 label.eventofsc_sperimentazioneClinica=Sperimentazione Clinica
 label.eventofsc_tipologiaGruppo=Tipologia gruppo
+label.eventofsc_tipologiaSperimentazione=Tipologia sperimentazione
 label.facoltativo=facoltativo
 label.faq=Faq
 label.fase=Fase
@@ -861,6 +875,7 @@ label.id_evento=Id Evento
 label.id_evento_link=ID evento:
 label.id_proto_batch=Id Proto Batch
 label.id_provider=Id del Provider
+label.identificativo_persona_evento=Identificativo Responsabile
 label.idoneitaSede=Idoneità della Sede
 label.idoneita_sede=Idoneità della Sede
 label.impegno_complessivo_ore=Impegno complessivo in ore
@@ -936,6 +951,7 @@ label.inserito=inserito
 label.inserito_come_coordinatore=È il coordinatore del comitato scientifico?
 label.inserito_da=Denominazione legale Provider
 label.inserito_piano_formativo=Evento del Piano Formativo relativo all''anno {0}
+label.investigatori=Investigatori
 label.invia=Invia
 label.invia_al_cogeaps=Invia al Co.Ge.A.P.S.
 label.invia_al_protocollo=Invia al Protocollo
@@ -1313,6 +1329,8 @@ label.responsabile_segreteria_organizzativa=Responsabile segreteria organizzativ
 label.responsabile_sistema_informatico=Responsabile Sistema Informatico
 label.responsabili=Responsabili
 label.responsabili_scientifici=Responsabili scientifici
+label.responsabili_scientifici_esperti_coordinatori=Responsabili scientifici / Esperti / Coordinatori
+label.responsabili_scientifici_esperti_coordinatori_investigatori=Responsabili scientifici / Esperti / Coordinatori / Investigatori
 label.riassegna_domanda_accreditamento=Riassegna la domanda di accreditamento
 label.ricavi_altre_forme_finanziamento=Ricavi da altre forme di finanziamento
 label.ricavi_da_sponsor=Ricavi da sponsorizzazioni
@@ -1453,6 +1471,7 @@ label.storico=In storico
 label.straniera=Straniera
 label.straniero=Straniero
 label.supporto_disciplinare_fad=FAD con supporto disciplinare svolto da esperto (Docente o tutor)
+label.svolge_attivita_docenza=Svolge attività di docenza
 label.svolgimento=Svolgimento
 label.sì=Sì
 label.tel_secondario=Telefono secondario
