--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -760,6 +760,7 @@ label.elimina=Elimina
 label.elimina_tutti_eventi_da_pfa=Elimina tutti gli eventi dal Piano Formativo
 label.elimina_tutti_eventi_da_pfa_from_csv=Elimina tutti gli eventi dal Piano Formativo (importati da csv)
 label.email=E-mail
+label.empty= 
 label.enabled=Abilitato
 label.ending_verbale=Di quanto sopra attestato, è stato redatto il presente verbale composto da n°      pagine, comprensive degli allegati, e copia del quale viene rilasciata al Legale Rappresentante. \nLetto, confermato e sottoscritto alle ore      \nData     \n
 label.error=Errore
