12868 - Modifiche Eventi RES inserito per tutte le tipologie di eventi Formazione Residenziale (RES) in caso di evento di versione 2 il ruolo del moderatore all’interno del Campo 20, denominandolo "Docente/Relatore/Tutor/Moderatore"

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -373,6 +373,9 @@ error.professioni_non_conformi_con_accreditamento=Le professioni dei Componenti 
 error.ratio_metodologie_interattive_res=ATTENZIONE! Sono state selezionate metodologie di didattica interattiva, si ricorda che al fine di garantire un’adeguata partecipazione è necessario che il numero dei discenti sia limitato (massimo 25 partecipanti per tutor/relatore/docente titolare)
 error.repeat=non corrisponde
 error.risultato_atteso_non_utilizzato=Risultato atteso non utilizzato
+error.ruolo_responsabile_scientifico_x_non_valido=Ruolo di Responsabile scientifico A, B, C non valido
+error.ruolo_coordinatore_x_non_valido=Ruolo di Coordinatore A, B, C non valido
+error.ruolo_esperto_x_non_valido=Ruolo di Esperto A, B, C non valido
 error.same_password=Si prega di inserire una nuova password
 error.sede_legale_gia_inserita=La Sede Legale deve essere unica ed è già stata inserita per questo Provider
 error.sede_legale_integrazione=Il risultato della valutazione dell'integrazione viola il vincolo di avere una e una sola sede legale. Si prega di ricontrollare la valutazione.
@@ -743,6 +746,7 @@ label.docente=Docente
 label.docente_tutor=Docente / Tutor
 label.docenti=Docenti
 label.docenti_relatori_tutor=Docente / Relatore / Tutor
+label.docenti_relatori_tutor_moderatore=Docente / Relatore / Tutor / Moderatore
 label.documenti=Documenti
 label.documenti_della_domanda=Documenti della Domanda di Accreditamento
 label.documento_verifica_ricadute_formative=Allegato verifica ricadute formative
