Evento aggiunta campo versione.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1577,6 +1577,7 @@ label.verifica_apprendimento=Verifica Apprendimento
 label.verifica_apprendimento_partecipanti=Verifica Apprendimento partecipanti
 label.verifica_distanza_ricadute_formative=Verifica a distanza di tempo delle ricadute formative
 label.verifica_presenza_partecipanti=Verifica presenza partecipanti
+label.versione=Versione
 label.visualizza=Visualizza
 label.visualizza_altri=Visualizza tutte le valutazioni
 label.visualizza_comunicazione=Visualizza Comunicazione
