EventoRES aggiunta della attività Saluti introduttivi per tutte le tipologie di eventi residenziali.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -944,6 +944,7 @@ label.inserisci_persona=Inserisci Persona
 label.inserisci_piano_formativo=Inserisci Piano Formativo
 label.inserisci_registrazione_partecipanti=Inserisci Registrazione Partecipanti
 label.inserisci_relazione_annuale=Inserisci Relazione Annuale
+label.inserisci_saluti_introduttivi=Inserisci Saluti introduttivi
 label.inserisci_sponsor=Inserisci Sponsor
 label.inserisci_valutazione=Inserisci Valutazione
 label.inserisci_valutazione_apprendimento=Inserisci Valutazione Apprendimento
