EventoRES aggiunta campo "Numero partecipanti per corso" in caso di tipologia evento "Corso di aggiornamento teorico e/o pratico (massimo 200 partecipanti)"

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -359,12 +359,15 @@ error.numero_minimo_professioni_settoriale=Nei componenti del Comitato Scientifi
 error.numero_minimo_professionisti_sanitari=Il Comitato Scientifico deve essere composto da almeno 5 professionisti sanitari
 error.numero_minimo_professionisti_sanitari_integrazione=Il risultato della valutazione dell'integrazione viola il vincolo del numero dei professionisti sanitari del comitato scientifico. Si prega di ricontrollare la valutazione.
 error.numero_partecipanti_non_valido=Il numero dei partecipanti deve essere compreso tra 1 e 100000
+error.numero_positivo=Il numero inserito deve essere positivo
 error.numero_referee=Selezionare esattamente 3 referee
 error.numero_referee_riassegnamento=Selezionare il corretto numero di Referee a cui riassegnare la domanda da valutare.
 error.ora_non_valida1=Ora non valida! La Seduta non può essere inserita in un orario già passato.
 error.ora_non_valida2=Ora non valida! La Seduta non può essere inserita in un orario comprendente i prossimi 30 minuti.
 error.ordinare_le_date_intermedie=Si prega di mantenere l'ordine crescente delle date intermedie
 error.partecipanti_AUDIT_ore=Minimo 2 ore non frazionabili multiple di 2 per le figure di tipo partecipante
+error.partecipanti_corso_aggiornamento_fino_100=Il numero massimo di partecipanti per questa tipologia di evento è di 100 partecipanti
+error.partecipanti_corso_aggiornamento_da_101_fino_200=Il numero di partecipanti per questa tipologia di evento deve essere fra 101 e 200 partecipanti
 error.partitaIva.duplicated=la partita iva risulta già registrata nel sistema
 error.password.incorrect=password non esatta
 error.password_repeat=la password non coincide
@@ -1154,6 +1157,7 @@ label.numero_partecipanti=Numero dei partecipanti
 label.numero_partecipanti=Numero partecipanti
 label.numero_partecipanti_acquisito_crediti=Numero partecipanti/tutor/docenti/relatori che hanno acquisito crediti
 label.numero_partecipanti_no_crediti=Numero partecipanti senza crediti
+label.numero_partecipanti_per_corso=Numero partecipanti per corso
 label.numero_partecipanti_short=Num. Part.
 label.numero_professioni_acquisito_crediti=Numero professioni che hanno acquisito crediti
 label.numero_protocollo=Numero Protocollo
