Calcolo crediti EventoFSC per la versione 2

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1253,8 +1253,10 @@ label.presa_visione=Presa visione
 label.presa_visione_segreteria=(Il Provider non ha integrato i dati/documenti richiesti)
 label.presente_alla_visita_verifica=(presente alla visita di verifica)
 label.presente_legale_rappresentante_sottoscrizione_verbale=\u00C8 presente il Legale Rappresentante per la sottoscrizione del verbale?
+label.presente_tutor_esperto_esterno_validatore=È presente un Tutor esperto esterno che validi le attività del gruppo?
 label.presenzaPartecipanti=Presenza dei Partecipanti
 label.presenza_partecipanti=Presenza dei Partecipanti
+label.prevista_redazione_documento_conclusivo=È prevista la redazione di un documento conclusivo quale ad es. linee guida, procedure, protocolli, indicazioni operative?
 label.prezzo=Prezzo
 label.prima=Prima
 label.privata=Privata
