Commiting the progress so far to syncronize with Ameljo.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -825,6 +825,7 @@ label.evento_sponsorizzato_radio=L’evento è sponsorizzato?
 label.evento_titolo=Evento {0}
 label.evento_to_cogeaps_title=Trasmissione XML partecipanti alla Regione Veneto e al CO.Ge.A.P.S.
 label.eventofsc_ottenutoComitatoEtico=Ottenuto il parere del comitato etico?
+label.eventofsc_ottenutoComitatoEtico_no_question_mark=Ottenuto il parere del comitato etico
 label.eventofsc_sperimentazioneClinica=Sperimentazione Clinica
 label.eventofsc_tipologiaGruppo=Tipologia gruppo
 label.eventofsc_tipologiaSperimentazione=Tipologia sperimentazione
