Added label for the modal main message.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -597,6 +597,7 @@ label.conferma_modifiche_evento=Valida modifiche
 label.conferma_password=Conferma Password
 label.conferma_valutazione=Conferma Valutazione
 label.conferma_variazione_dati=Conferma
+label.conferma_variazione_dati_e_documenti=Si desidera avviare il flusso Variazioni dati e documenti?
 label.contrassegna_come_letta=Contrassegna come letta
 label.contratto=Contratto
 label.contratto_da_inserire=CONTRATTO DA INSERIRE
