--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -295,9 +295,9 @@ error.data_fine_res_non_valida=La data di fine dell'Evento deve essere compresa 
 error.data_fine_riedizione_non_valida=La riedizione si deve svolgere nell'anno solare di riferimento dell'Evento rieditato
 error.data_invalid=formato data non corretto
 error.data_inizio_antecedente_al_padre=La data di inizio di una riedizione non può essere antecedente a quella dell'evento rieditato
-error.data_inizio_non_valida=Non è possibile inserire un Evento entro 15 giorni (Provider A) / 30 giorni (Provider B) dalla data del suo inizio.
-error.data_inizio_riedizione_non_valida=Non è possibile inserire una riedizione di un Evento entro 10 giorni dalla data del suo inizio, che deve inoltre ricadere nello stesso anno solare della data di fine dell'Evento che viene rieditato.
-error.data_inizio_riedizione_non_valida_anno_padre=La data di inizio di una riedizione non può essere antecedente a quella dell'evento rieditato e deve inoltre ricadere nello stesso anno solare della data di fine dell'Evento che viene rieditato.
+error.data_inizio_non_valida=Non è possibile inserire un Evento nei 15 giorni (Provider A) / 30 giorni (Provider B) precedenti la data del suo inizio.
+error.data_inizio_riedizione_non_valida=Non è possibile inserire una riedizione di un Evento nei 10 giorni precedenti la data del suo inizio
+error.data_inizio_riedizione_non_valida_per_anno_padre=La data di inizio di una riedizione deve ricadere nello stesso anno solare della data di fine dell'Evento che viene rieditato.
 error.data_intermedia_annullata=Non è possibile annullare la data intermedia
 error.data_intermedia_res_non_valida=Le date intermedie devono essere strettamente comprese tra la data di inizio e la data di fine
 error.data_intermedia_ripetuta=Data intermedia ripetuta
