Corretta label dell'errore "L'evento deve essere sponsorizzato" a "La sponsorizzazione da aziende che trattano alimenti per la prima infanzia è possibile solo per eventi sponsorizzati"

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -396,7 +396,7 @@ error.troppi_partecipanti25=Il numero massimo di partecipanti per questa tipolog
 error.troppi_partecipanti_per_tutor=Il numero dei Partecipanti supera il rapporto 5 Partecipanti per Tutor
 error.troppi_responsabili3=I responsabili scientifici devono essere al massimo 3
 error.url=URL errato
-error.evento_deve_essere_sponsorizzato=L'evento deve essere sponsorizzato
+error.evento_deve_essere_sponsorizzato=La sponsorizzazione da aziende che trattano alimenti per la prima infanzia è possibile solo per eventi sponsorizzati
 error.username.duplicated=username già registrato nel sistema
 error.vincolo_partecipanti_tutorATTIVITA_DI_RICERCA=\u00C8 obbligatorio inserire nel programma almeno un ruolo Partecipante
 error.vincolo_partecipanti_tutorAUDIT_CLINICO_ASSISTENZIALE=\u00C8 obbligatorio inserire nel programma almeno un ruolo Partecipante
