--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -307,6 +307,7 @@ error.date_non_separabili=Data di inizio e data di fine evento devono coincidere
 error.date_non_unificabili=Data di inizio e data di fine evento non possono coincidere
 error.datiaccreditamento_mancanti=\u00C8 necessario compilare la sezione dei dati di accreditamento prima di compilare
 error.docente_gia_inserito=Docente già inserito
+error.docente_non_presente_res=ATTENZIONE! Utilizzato docente non più presente fra i docenti dell'evento
 error.durata_minima_complessiva_non_raggiunta=Durata minima complessiva dell'evento non raggiunta
 error.elaborazione_pendente=Invio non concesso.\u00c8 gi\u00e0 presente un invio pendente in fase di elaborazione
 error.email.duplicated=email già registrata nel sistema
