--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -768,6 +768,7 @@ label.domande_provvisorie=Domande Provvisorie
 label.domande_standard=Domande Standard
 label.dopo=Dopo
 label.dotazione_hardware_software=Dotazione hardware e software necessaria all'utente per svolgere l'evento
+label.due=2
 label.durata=Durata
 label.durata_impegno_studio=Durata / Impegno studio
 label.edit_datiEconomici=Modifica dei Dati Economici
@@ -1554,6 +1555,7 @@ label.tutte_le_professioni=Tutte le Professioni/Discipline
 label.tutte_le_valutazioni=Mostra tutte le Valutazioni
 label.ultima_comunicazione_ricevuta=Ultima Comunicazione ricevuta: {0}
 label.ultimi_messaggi_ricevuti=Ultimi messaggi ricevuti ({0} di {1})
+label.uno=1
 label.upload_sponsor_before=\u00C8 necessario caricare tutti i contratti degli sponsor prima di procedere con la rendicontazione dell'evento
 label.url=URL
 label.userId=User Id
@@ -1603,6 +1605,7 @@ label.verifica_apprendimento_partecipanti=Verifica Apprendimento partecipanti
 label.verifica_distanza_ricadute_formative=Verifica a distanza di tempo delle ricadute formative
 label.verifica_presenza_partecipanti=Verifica presenza partecipanti
 label.versione=Versione
+label.versione_evento=Versione evento
 label.visualizza=Visualizza
 label.visualizza_altri=Visualizza tutte le valutazioni
 label.visualizza_comunicazione=Visualizza Comunicazione
