Finished task #12542 Punto 2
1. Added "Evento archiviato" search parameter on Evento Cerca
2. Also updated the datatable for the new column "Versione"

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -805,6 +805,7 @@ label.esporta_pdf=Esporta in pdf
 label.estrattoBilancioComplessivo=Estratto del bilancio complessivo degli ultimi 3 anni
 label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni e budget previsionale
 label.eventi=Eventi
+label.eventi_archiviati=Evento archiviato
 label.eventi_con_crediti_non_confermati=Eventi con crediti non confermati
 label.eventi_definitivi_da_pfa_anno=Eventi rendicontati corrispondenti al Piano Formativo
 label.eventi_in_bozza=In bozza
