--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1163,6 +1163,7 @@ label.notifica_cambio_crediti=Avviso: il valore dei crediti attribuiti all''even
 label.notifica_non_cambio_crediti=Avviso: il valore dei crediti attribuiti all''evento rimane di: {0}. Il numero dei crediti calcolati automaticamente dal sistema corrisponde a: {1}
 label.numero_decreto=Numero decreto
 label.numero_delibera=Delibera N°
+label.numero_dipendenti=Numero dipendenti
 label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
 label.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da un Coordinatore e almeno 4 Componenti
 label.numero_partecipanti=Numero dei partecipanti
@@ -1171,6 +1172,7 @@ label.numero_partecipanti_acquisito_crediti=Numero partecipanti/tutor/docenti/re
 label.numero_partecipanti_no_crediti=Numero partecipanti senza crediti
 label.numero_partecipanti_per_corso=Numero partecipanti per corso
 label.numero_partecipanti_short=Num. Part.
+label.numero_personale_dedicato_alla_formazione=Numero personale dedicato alla formazione
 label.numero_professioni_acquisito_crediti=Numero professioni che hanno acquisito crediti
 label.numero_protocollo=Numero Protocollo
 label.numero_valutazioni_non_date=Numero Valutazioni non date (consecutivamente)
