13900 - Bloccare inserimento max coordinatori + tooltip fisso per FSC + aggiunta tooltip

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1641,6 +1641,7 @@ message.completato=Operazione effettuata!
 message.componente_comitato_eliminato=Componente del Comitato Scientifico eliminato
 message.comunicazione_chiusa=La Comunicazione è stata chiusa con successo.
 message.comunicazione_inviata=Comunicazione inviata con successo.
+message.coordinatori_massiomo_3=I coordinatori devono essere al massimo 3
 message.conferma_registrazione=L’utenza è stata registrata correttamente.\nRiceverete a breve la mail che vi fornirà le informazioni e le credenziali per effettuare l’accesso al sistema.\nVi invitiamo a predisporre la documentazione necessaria da allegare alla richiesta di accreditamento.
 message.creazione_diff_accreditamento=Creazione Diff per l'accreditamento creato con successo.
 message.dati_attivita_inseriti=I dati relativi all'attività sono stati inseriti con successo.
