#13894 - Nuovo campo Crediti in lista eventi

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -858,6 +858,7 @@ label.filtra_relazione_annuale=Sezione relazione annuale
 label.filtri=Filtra:
 label.firma_digitalmente=Firma digitalmente
 label.firma_nomeFirmatario=Firma {0} ({1}) :
+label.flag_crediti=Crediti Attribuiti
 label.flag_crediti_confermati=Crediti confermati
 label.flusso_accreditamento=Flusso Accreditamento
 label.flusso_accreditamento_provvisorio=Flusso Accreditamento Provvisorio
