--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -283,6 +283,7 @@ error.campi_mancanti_responsabile_segreteria=Alcuni campi del responsabile della
 error.campi_mancanti_responsabili=Alcuni campi dei responsabili scientifici segnalati in rosso non sono stati inseriti correttamente
 error.campi_mancanti_sponsor=Alcuni campi degli sponsor segnati in rosso non sono stati inseriti correttamente
 error.cf_duplicated=Codice Fiscale già inserito nel sistema
+error.persona_evento_duplicated=La persona con il Ruolo e il Titolare/Sostituto impostati è già presente nella lista
 error.codiceFiscale.duplicated=il codicefiscale risulta già registrato nel sistema
 error.codiceFiscale.firmatario=il codice fiscale del firmatario non corrisponde al Legale Rappresentante o suo Delegato
 error.complete=campo non completo
