13898 - Duplicazione ruolo Coordinatore da eliminare per FSC Modifica etichette e tooltip

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -896,7 +896,10 @@ label.id_evento=Id Evento
 label.id_evento_link=ID evento:
 label.id_proto_batch=Id Proto Batch
 label.id_provider=Id del Provider
-label.identificativo_persona_evento=Identificativo Responsabile
+label.identificativo_persona_evento=Identificativo
+label.identificativo_persona_evento_coordinatore=Identificativo Coordinatore
+label.identificativo_persona_evento_esperto=Identificativo Esperto
+label.identificativo_persona_evento_responsabile=Identificativo Responsabile
 label.idoneitaSede=Idoneità della Sede
 label.idoneita_sede=Idoneità della Sede
 label.impegno_complessivo_ore=Impegno complessivo in ore
